--- a/city-tours/src/components/navbar/NavBar.scss
+++ b/city-tours/src/components/navbar/NavBar.scss
@@ -20,5 +20,13 @@
     color: $mainGrey;
     text-transform: capitalize;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    transition: all 0.3s linear;
+    &:hover{
+        color: $mainGreen
+    }
+}
+
+.active{
+    color: $mainGreen;
 }
